# c2750

./: StructListDemo.c  a3.py  linkedListAPI.c  llTest.c
A1/: CalendarParser.c  EventElements.c  EventElements.h  LinkedListAPI.c  LinkedListAPI.h  Makefile  calParser  dtRun  dtTest.c  icTest.c  linkedListAPI.c  multi  multiLineTest.c  paRun  propAlarmTest.c  runTest  simpleICFile.ics  testCalLong.ics  testRun  testing.c
A2/: .makefile.swp  BasicFunctions.c  (+20 more)
A2TestHarness_A3compl/: CMakeLists.txt
A2TestHarness_A3compl/include/: testcases.h
A2TestHarness_A3compl/other/: CalendarParser.c  ParserFuncs.c  UtilityFuncs.c
A2TestHarness_A3compl/src/: calTest.c  calTestCases.c  listTest.c  testCases.c
A2TestHarness_A3compl/studentCode/: BasicFunctions.c  CalendarParser.c  LinkedListAPI.c  validateFunctions.c
A2TestHarness_A3compl/studentInclude/: BasicFunctions.h  LinkedListAPI.h  readFile.h  validateFunctions.h
A2TestHarness_A3compl/studentOutput/: foldedCalendar1.ics  foldedCalendar2.ics  foldedCalendar3.ics  megaCal.ics  megaCal1.ics  megaCalFolded.ics
A2TestHarness_A3compl/testFiles/invAlarm/: invAmlNoTrigger.ics
A2TestHarness_A3compl/testFiles/invCalendar/: missingVER.ics
A2TestHarness_A3compl/testFiles/invEvent/: invDT1.ics  missingDTSTAMP.ics
A2TestHarness_A3compl/testFiles/invalidA2/: doubleCalScale1.ics  dtendduration1.ics  dupRes1.ics  invAlarm1.ics  invAlarmDupProps1.ics  randomBegin1.ics
A2TestHarness_A3compl/testFiles/validA2/: megaCalFolded1.ics
A2TestHarness_A3compl/testFiles/validCalendar/: testCalEvtPropAlm1.ics  testCalEvtPropAlm3.ics
(+73 files in other folders)
